--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.14"
   },
+  "engines": {
+    "node": "14.17.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
