--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "mongoose": "^5.12.14",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -24,7 +25,7 @@
   },
   "engines": {
     "node": "14.17.0"
-},
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
