--- a/package.json
+++ b/package.json
@@ -6,10 +6,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "async": "^3.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "^10.0.0",
+    "express": "~4.16.1",
+    "express-validator": "^6.12.0",
+    "helmet": "^4.1.1",
+    "http-errors": "~1.6.3",
+    "luxon": "^1.27.0",
     "mongoose": "^5.12.14",
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -17,9 +29,13 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "heroku-postbuild": "npm run build",
+    "devstart": "nodemon ./bin/www",
+    "serverstart": "DEBUG=job_tracker:* npm run devstart",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
