--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "luxon": "^1.27.0",
     "mongodb": "^3.6.9",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "morgan": "^1.10.0"
   },
   "engines": {
     "node": "14.17.0"
