--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "luxon": "^1.27.0",
     "mongodb": "^3.6.9",
