--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,1 @@
-const url = `mongodb+srv://${process.env.TrackerAdmin}:${
-  process.env.TrackerAdminPassword
-}@${process.env.cluster0}.mongodb.net`;
-
-console.log(url)
+MONGO_URI=mongodb://TrackerAdmin:TrackerAdminPassword@cluster0-shard-00-00.euzmb.mongodb.net:27017,cluster0-shard-00-01.euzmb.mongodb.net:27017,cluster0-shard-00-02.euzmb.mongodb.net:27017/TrackerAdmin?ssl=true&replicaSet=atlas-va16fv-shard-0&authSource=admin&retryWrites=true&w=majority
