--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
